Revision history for {{$dist->name}}

{{$NEXT}}

1.211     2022-01-12
    - Fixed some typos and organization of documentation
    - Ensured all code was run through perltidy
    - Get rid of TravisCI config
    - Add some more guidance about not using this module
    - Fix syntax use that broke compatibility with 5.8
    - Setup GH Workflows for testing

1.210     2022-01-10
    - Update to Starter::Git and clean up the dist.ini file
    - Switch to Crypt::Bcrypt
    - Change all tests to use a cost of 5 at least
    - Add a 'type' attribute so selecting the encoding type is possible
    - Default the type to 2a to keep it as it was prior to switching to
      Crypt::Bcrypt

1.209     2017-03-25
    - Revert to using bytes as that broke salt length tests
    - Added a few author tests for Data::Entropy::Algorithms::rand_bits()

1.208     2017-03-24
    - Remove MANIFEST.SKIP as we use .gitignore
    - Stop using 'bytes' and make use of Encode instead as we're already on at
      least version 5.8.1
    - Remove Try::Tiny from runtime requirements as it's only used in testing

1.207     2017-02-11
    - Added LICENSE and CONTRIBUTING.md files
    - Added settings attribute
    - Added documentation on how best to create a salt
    - Added some extra doc examples

1.206     2016-07-01
    - Fix errant inclusions in cpanfile

1.205     2016-06-06
    - Put requirements in a cpanfile
    - Changed to [Starter]

1.204     2016-03-21
    - moved to Dist::Zilla
    - perltidy'd everything

1.203 2016-03-07

    [ TESTS ]
    * Fixed test reliant upon Perl error messages

1.202 2016-03-05

    [ FEATURE ]
    * Allowed the constructor to accept a hashref or a hash
      as requested in issue #1

    [ TESTS ]
    * Added many more tests to the suite

    [ DOCUMENTATION ]
    * Updated the documentation to show the ability to add parameters to
      the constructor.
    * Moved cost and salt descriptions to a new "attributes" section.


1.201 2016-03-05
